# agentic-api

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  ROADMAP.md  mkdocs.yaml  test_litellm_repro.py  test_repro.py  test_server_format.py
.github/workflows/: pre-commit.yml
crates/agentic-core/: Cargo.toml
crates/agentic-core/benches/: benches.rs  executor_throughput.rs  storage_crud.rs
crates/agentic-core/src/: config.rs  lib.rs  proxy.rs
crates/agentic-core/src/events/: mod.rs  normalize.rs  types.rs
crates/agentic-core/src/executor/: accumulator.rs  engine.rs  error.rs  gateway.rs  mod.rs  request.rs  upstream.rs
crates/agentic-core/src/executor/modes/: conversation.rs  mod.rs  response.rs
crates/agentic-core/src/storage/: conversation.rs  pool.rs  response.rs
crates/agentic-core/src/storage/models/: conversation.rs  item.rs
crates/agentic-core/src/storage/types/: conversation.rs  errors.rs  item.rs  response.rs
crates/agentic-core/src/tool/: codex.rs  normalize.rs  registry.rs
crates/agentic-core/src/types/: event.rs  io.rs  mod.rs  request_response.rs
crates/agentic-core/src/types/io/: input.rs  tools.rs
crates/agentic-core/src/utils/: common.rs
crates/agentic-core/tests/: event_normalizer_test.rs  stateful_conversation_integration.rs  stateful_responses_integration.rs  storage_integration.rs  tool_normalization_test.rs  web_search_tool_test.rs
crates/agentic-core/tests/cassettes/: record_codex_cli_tool_call_cassettes.sh
crates/agentic-core/tests/cassettes/codex/: codex-gateway-websocket-namespace-tool-Qwen-Qwen3.6-35B-A3B-streaming.yaml  codex-openai-https-function-tool-gpt-4o-streaming.yaml  codex-openai-https-namespace-tool-gpt-4o-streaming.yaml  codex-openai-websocket-namespace-tool-gpt-4o-streaming.yaml
crates/agentic-core/tests/cassettes/events/: function-call-vllm-gemma4.yaml
crates/agentic-core/tests/support/: mod.rs
crates/agentic-praxis/: Cargo.toml
crates/agentic-server/: Cargo.toml
crates/agentic-server-core/: Cargo.toml
crates/agentic-server-core/benches/: accumulator_throughput.rs  benches.rs  executor_throughput.rs  storage_concurrent.rs  storage_crud.rs
crates/agentic-server-core/benches/cassettes/: reasoning-and-tool-call-Qwen-Qwen3-30B-A3B-FP8-nonstreaming.yaml  reasoning-and-tool-call-Qwen-Qwen3-30B-A3B-FP8-streaming.yaml
crates/agentic-server-core/migrations/: 0001_initial.sql  0002_add_placeholders.sql
crates/agentic-server-core/src/: config.rs  error.rs  lib.rs  proxy.rs  readiness.rs
crates/agentic-server-core/src/events/: mod.rs  normalize.rs  types.rs
crates/agentic-server-core/src/executor/: accumulator.rs  engine.rs  gateway.rs  inference.rs  rehydrate.rs  request.rs  upstream.rs
crates/agentic-server-core/src/storage/: conversation.rs  mod.rs  pool.rs  response.rs  schema.rs
crates/agentic-server-core/tests/: accumulator_cassette_test.rs  dispatch_loop_cassette_test.rs  event_normalizer_test.rs  mcp_tool_test.rs  stateful_responses_integration.rs  storage_integration.rs  tool_normalization_test.rs  web_search_tool_test.rs
crates/agentic-server/benches/: gateway_bench.rs  proxy_bench.rs
crates/agentic-server/src/: app.rs  config.rs  handler.rs  lib.rs  main.rs  proxy.rs  readiness.rs  server.rs
crates/agentic-server/src/handler/: common.rs  mod.rs
crates/agentic-server/src/handler/http/: messages.rs  mod.rs  responses.rs
crates/agentic-server/src/handler/websocket/: responses.rs
crates/agentic-server/tests/: health_test.rs  messages_test.rs  responses_test.rs  responses_websocket_test.rs
crates/agentic-server/tests/common/: mod.rs
docs/: requirements.txt
docs/adr/: ADR-03_gateway_integration.md
docs/design/: codex-integration.md  core-public-api.md  mcp-gateway-integration.md  tool-framework.md
docs/developing/: getting-started.md
scripts/: codex-mcp-fixture-server.py  codex-seed-model-cache.sh  codex-start-gateway.sh
src/: main.rs
(+74 files in other folders)
