[package]
name = "agentic-core"
description = "Framework-agnostic core library for agentic-api"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bytes.workspace = true
futures.workspace = true
http.workspace = true
reqwest = { workspace = true, features = ["default-tls", "stream"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["time"] }
tracing.workspace = true

sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "any", "migrate", "sqlite", "postgres"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v7", "serde"] }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "storage_crud"
harness = false


[lints]
workspace = true
