[package]
name = "agentic-server"
description = "Standalone axum server for agentic-api"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
agentic-core = { path = "../agentic-core" }
axum = "0.8"
clap = { version = "4", features = ["derive", "env"] }
http = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
bytes = "1"
criterion = { version = "0.5", features = ["async_tokio"] }
futures = "0.3"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde_json = "1"
tokio = { version = "1", features = ["full", "test-util"] }

[[bench]]
name = "proxy_bench"
harness = false

[lints]
workspace = true
