[package]
name = "agentic-server"
description = "Standalone axum server for agentic-api"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
agentic-core.workspace = true
axum.workspace = true
bytes.workspace = true
clap.workspace = true
futures.workspace = true
http.workspace = true
reqwest = { workspace = true, features = ["json"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
criterion.workspace = true
tokio = { workspace = true, features = ["test-util"] }

[[bench]]
name = "proxy_bench"
harness = false

[lints]
workspace = true
